--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,9 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite": "^5.2.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -29,6 +31,6 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.0"
+    "vite": "^5.2.6"
   }
 }
