--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/client": "^3.9.8",
     "@reduxjs/toolkit": "^2.2.2",
+    "@vitejs/plugin-react": "^4.2.1",
     "axios": "^1.6.8",
     "graphql": "^16.8.1",
     "jwt-decode": "^4.0.0",
@@ -19,9 +20,7 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.3",
-    "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.2.6"
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
