--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "react-fontawesome": "^1.7.1",
     "vite": "^5.2.6"
   }
