--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "react-fontawesome": "^1.7.1",
+    "react-icons": "^5.0.1",
     "vite": "^5.2.6"
   }
 }
