--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^2.2.2",
     "@vitejs/plugin-react": "^4.2.1",
+    "antd": "^5.15.4",
     "axios": "^1.6.8",
     "graphql": "^16.8.1",
     "jwt-decode": "^4.0.0",
